Criação do token / autenticação do usuário

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,4 @@
 GITHUB_CLIENT_SECRET=7b7ae0c97b91ec0600098bff714634244f6422a7
 GITHUB_CLIENT_ID=e144fdb9ec2f062609c4
+
+JWT_SECRET=2bd7bbf7d29369dd7ce11a0bf9445c6e
